	  brackets, only one space will be left after "...". (DLR)
  do_para_begin(), do_para_end()
	- Maintain current_y's value when moving up or down lines so
	  that smooth scrolling works correctly. (DLR)
  breakable(), break_line()
	- Make goal a ssize_t instead of an int, since fill is now a
	  ssize_t, and the position at which a line is broken can be
	  greater than COLS. (DLR)
  main()
	- Tweak the command line parsing routine so that multiple +LINE
	  flags are properly interpreted in multibuffer mode. (DLR)
- nano.h:
	- Add WIDTH_OF_TAB #define, containing the default width of a
	  tab. (DLR)
	- Move the PATH_MAX #define here from files.c.
	- Remove unused COPYFILEBLOCKSIZE #define. (DLR)
- proto.h:
	- Add missing NANO_SMALL #ifdef around the cut_marked_segment()
	  prototype. (DLR)
- rcfile.c:
  parse_rcfile()
	- Add missing brackets around an if statement block so that
	  parsing the numeric argument after "tabsize" works properly
	  again. (DLR, found by Mike Frysinger)
	- Since flag values are longs, use "%ld" instead of "%d" in the
	  debugging messages indicating when a flag is set or unset.
	  (DLR)
- search.c:
  regexp_init()
	- If NANO_SMALL is defined, don't bother checking the
	  CASE_SENSITIVE flag or using its value when compiling a list
	  of matching regular expressions. (DLR)
  search_init()
	- Add parameter use_answer.  When it's TRUE, only set
	  backupstring to answer.  This is needed to preserve the text
	  of the statusbar when switching to the search prompt from
	  the "Go To Line" prompt.  Also, set backupstring before doing
	  anything else, add one minor efficiency tweak, and preserve
	  the text of the statusbar no matter what when switching from
	  the search prompt to the "Go To Line" prompt, since the
	  toggling works both ways now and non-numeric text shouldn't be
	  lost when going only one of those ways. (DLR)
	- When we're replacing and the mark is on, display a prompt