@@ -227,6 +227,10 @@ CVS code -
 	- Make goal a ssize_t instead of an int, since fill is now a
 	  ssize_t, and the position at which a line is broken can be
 	  greater than COLS. (DLR)
+  handle_sigwinch()
+	- Call shortcut_init(FALSE) defore redisplaying the main list,
+	  so that "UnJustify" isn't erroneously displayed when we
+	  justify, suspend, and then continue. (DLR)
   main()
 	- Tweak the command line parsing routine so that multiple +LINE
 	  flags are properly interpreted in multibuffer mode. (DLR)
